FEAT: Forgot to add files before commiting

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  z-index: 9999999;
 }
 
 .navbar-lewagon .navbar-collapse {
