--- a/app/assets/stylesheets/recruits/index.scss
+++ b/app/assets/stylesheets/recruits/index.scss
@@ -4,4 +4,12 @@
     text-align: center;
     margin-bottom: 20px;
   }
+
+  a{
+    color: #2f2519;
+
+    &:hover {
+      color: #e89f71;
+    }
+  }
 }
