--- a/app/views/recruits/index.html.erb
+++ b/app/views/recruits/index.html.erb
@@ -9,41 +9,29 @@
     <div class="list-group">
         <% @recruits.each do |recruit| %>
           <% if recruit.athlete.grad_year == 2022 %>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
-              <div>
+            <li class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
-              </div>
-              <div>
-              <%= recruit.athlete.grad_year %>
-              </div>
-            </a>
+                (<%= recruit.athlete.grad_year %>)
+                <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
+            </li>
           <% elsif recruit.athlete.grad_year == 2023 %>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
-              <div>
+            <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
-              </div>
-              <div>
-              <%= recruit.athlete.grad_year %>
-              </div>
-            </a>
+                (<%= recruit.athlete.grad_year %>)
+                <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
+            </li>
           <% elsif recruit.athlete.grad_year == 2024 %>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
-              <div>
+            <li class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
-              </div>
-              <div>
-              <%= recruit.athlete.grad_year %>
-              </div>
-            </a>
+                (<%= recruit.athlete.grad_year %>)
+                <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
+            </li>
           <% else %>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
-              <div>
+            <li class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
-              </div>
-              <div>
-              <%= recruit.athlete.grad_year %>
-              </div>
-            </a>
+                (<%= recruit.athlete.grad_year %>)
+                <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
+            </li>
           <% end %>
         <% end %>
     </div>
