FIX: show page viewable

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,4 +2,5 @@
 @import "home";
 @import "athletes/index";
 @import "recruits/index";
-@import "show_athlete";
+@import "schedules/index";
+@import "athletes/show";
