--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,6 +1,6 @@
 <!-- <h1><%#=  @calendar.id %> </h1>
 <p><%#= @calendar %></p> -->
-<div class="container">
+<div class="mt-5 container">
 <%= month_calendar(attribute: :start_date, events: @events) do |date, events| %>
   <%= date %>
 
@@ -26,3 +26,4 @@
   </div>
   <% end %>
 <% end %>
+</div>
