FEAT: schedule index and show page adjusted

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,5 +8,5 @@
 @import "ourteam";
 @import "sidenav";
 @import "group_avatars";
-// @import "simple_calendar";
+@import "calendar";
 @import "search";
