--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,8 +1,8 @@
-<div class="simple-calendar">
-  <div class="calendar-heading">
-    <%= link_to t('simple_calendar.previous', default: '◀︎'), calendar.url_for_previous_view %>
+<div class="simple-calendar mt-3 mb-5">
+  <div class="calendar-heading d-flex justify-content-between">
+    <%= link_to calendar.url_for_previous_view  do %><i class="fas fa-arrow-circle-left"></i><% end %>
     <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-    <%= link_to t('simple_calendar.next', default: '▶︎'), calendar.url_for_next_view %>
+    <%= link_to calendar.url_for_next_view do %><i class="fas fa-arrow-circle-right"></i><% end %>
   </div>
 
   <table class="table table-striped">
