--- a/app/assets/stylesheets/pages/_show_athlete.scss
+++ b/app/assets/stylesheets/pages/_show_athlete.scss
@@ -1,21 +1,60 @@
 
 .card {
   height: 300px;
-  width: 125px;
+  width: 100px;
   align-items: center;
   justify-content: center;
-  color: white;
-  border-radius: 16px;
+  color: #2f2519;
+  border-radius: 24px;
   text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
-  box-shadow: 0 5px 3px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
   text-align: center;
   justify-content: space-between;
   margin: 75px;
   display: flex;
-  border: black;
+}
+
+.card-notes {
+  width: 600px;
+  height: 300px;
+  align-items: center;
+  justify-content: center;
+  color: #2f2519;
+  border-radius: 24px;
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.3);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  text-align: center;
+  justify-content: space-between;
+  margin: 75px;
+  display: flex;
+}
+
+
+.checked {
+  color: yellow;
+}
+.card img {
+  border-radius: 24px;
+  height: 200px;
+  width: auto;
 }
 
 card h1 {
   font-size: px;
+}
+
+.background {
+ background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url("golf-background.jpg");
+ background-color: #cccccc;
+ background-position: bottom;
+ background-size: cover;
+ background-repeat: no-repeat;
+
+
+}
+
+.card-notes {
+  width: 300px;
+  height: 500px
 }
 
