--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -20,7 +20,7 @@
     <div class="col col-md-4">
       <div class= "card w-75">
         <h1 class= "card-title">Rating:</h1>
-        <h4><%= @athlete.rating %></p>
+        <h4 style="text-align: center"><%= @athlete.rating %></p>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-3 offset-md-3">
+      <div class="col-sm-1 offset-sm-1">
         <div class="card-notes">
           <h1> Notes: </h1>
         </div>
@@ -41,7 +41,7 @@
     <div class="row justify-content-center">
       <div class="btn-group btn-group-lg" role="group" aria-label="Add to Recruiting List">
         <p><%= simple_form_for([@athlete, @recruit]) do |f| %>
-          <%= f.submit "Create Recruit", class: "btn btn-primary" %>
+          <%= f.submit "Add to Recruiting List", class: "btn btn-primary" %>
           <% end %>
         </p>
       </div>
