--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -24,14 +24,14 @@
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
-          <span class="fa fa-star"></span>
+          <span class="fa fa-star checked"></span>
           <span class="fa fa-star"></span>
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-sm-1 offset-sm-1">
+      <div class="col">
         <div class="card-notes">
           <h1> Notes: </h1>
         </div>
