--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-5 pt-5">
-    <div class="wrapper">
+<!--     <div class="wrapper">
     <div id='sidebar'>
        <%= render 'sidenav' %>
     </div>
@@ -71,5 +71,5 @@
       </div>
 
     </div>
-    </div>
+    </div> -->
 </div>
