--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -11,27 +11,30 @@
           <%= month_calendar(attribute: :start_date, events: schedule.events) do |date, events| %>
             <%= date.day %>
 
-            <% events.each do |event| %>
-              <% event.recruits.each do |recruit| %>
-                <div class="calendar-card shadow">
-                    <!-- Card Header - Accordion -->
-  <!--                   <a href="#collapseCardExample" class="d-block calendar-card-header" data-toggle="collapse"
-                        role="button" aria-expanded="true" aria-controls="collapseCardExample"> -->
-                        <p class="m-0 font-weight-bold"><%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></p>
-  <!--                   </a> -->
-                    <!-- Card Content - Collapse -->
-  <!--                   <div class="collapse" id="collapseCardExample">
-                        <div class="calendar-card-body">
-                          <%= link_to event_path(event) do %><%= event.start_time.to_s(:time) %><% event.location %><% end %>
-                          <%= link_to athlete_path(recruit.athlete) do %>
-                          <%= recruit.athlete.first_name %>
-                          <%= recruit.athlete.last_name %>
-                          <%= recruit.athlete.grad_year %><% end %>
-                          </div>
-                        </div> -->
-                    </div>
+              <% events.each do |event| %>
+
+                <% event.recruits.each do |recruit| %>
+
+                <% if recruit.athlete.grad_year == 2022 %>
+                  <a href="events/<%= event.id %>" class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
+                    <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+                  </a>
+                <% elsif recruit.athlete.grad_year == 2023 %>
+                  <a href="events/<%= event.id %>" class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
+                    <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+                  </a>
+                <% elsif recruit.athlete.grad_year == 2024 %>
+                  <a href="events/<%= event.id %>" class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
+                    <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+                  </a>
+                <% else %>
+                  <a href="events/<%= event.id %>" class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
+                    <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %>
+                  </a>
+                <% end %>
+
+                <% end %>
               <% end %>
-            <% end %>
           <% end %>
         </div>
       </li>
