--- a/app/views/recruits/index.html.erb
+++ b/app/views/recruits/index.html.erb
@@ -12,24 +12,28 @@
             <li class="list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 (<%= recruit.athlete.grad_year %>)
+                <%= link_to "View Athlete", athlete_path(recruit) %>
                 <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
             </li>
           <% elsif recruit.athlete.grad_year == 2023 %>
             <li class="list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 (<%= recruit.athlete.grad_year %>)
+                <%= link_to "View Athlete", athlete_path(recruit) %>
                 <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
             </li>
           <% elsif recruit.athlete.grad_year == 2024 %>
             <li class="list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 (<%= recruit.athlete.grad_year %>)
+                <%= link_to "View Athlete", athlete_path(recruit) %>
                 <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
             </li>
           <% else %>
             <li class="list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
                 <%= recruit.athlete.first_name %> <%= recruit.athlete.last_name %>
                 (<%= recruit.athlete.grad_year %>)
+                <%= link_to "View Athlete", athlete_path(recruit) %>
                 <%= link_to recruit_path(recruit), method: :delete, data: { confirm: "Are you sure?" }, remote: true do %><i class="fas fa-trash-alt"></i><% end %>
             </li>
           <% end %>
