FEAT: dashboard somewhat set up

--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -10,7 +10,7 @@
 
   <table>
     <thead>
-      <tr class="athlete-table-header">
+      <tr class="athlete-table-header pt-3">
         <td class="text-center">Name</td>
         <td class="text-center">Graduation Year</td>
         <td class="text-center">Nationality</td>
