--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,5 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
+@import "dashboard";
 @import "athletes/index";
 @import "recruits/index";
 @import "schedules/index";
