--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -6,6 +6,12 @@
   width: 56px;
   border-radius: 50%;
 }
+
+.avatar-xlarge {
+  width: 80px;
+  border-radius: 50%;
+}
+
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
@@ -18,3 +24,11 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-xlarge-square {
+  width: 100px;
+  border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
