--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -20,7 +20,7 @@
     <div class="col col-md-4">
       <div class= "card w-75">
         <h1 class= "card-title">Rating:</h1>
-        <h4 style="text-align: center"><%= @athlete.rating %></p>
+        <h4><%= @athlete.rating %></p>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
           <span class="fa fa-star checked"></span>
