--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -13,7 +13,8 @@
   <% end %>
 </div>
 
-<div class="container" style="margin-top:100px">
+<div class="container" style="margin:100px">
+  <h1> Messages: </h1>
   <%= simple_form_for [ @chatroom, @message ], remote: true do |f| %>
     <%= f.input :content, label: false, placeholder: "Write your Message here" %>
   <% end %>
