--- a/app/assets/stylesheets/recruits/index.scss
+++ b/app/assets/stylesheets/recruits/index.scss
@@ -13,3 +13,11 @@
     }
   }
 }
+
+.recruit-index-top {
+  a {
+    background-color: #d57149;
+    color: #fff5ea;
+    border-radius: 5px;
+  }
+}
