--- a/app/assets/stylesheets/schedules/show.scss
+++ b/app/assets/stylesheets/schedules/show.scss
@@ -1,8 +1,13 @@
-.schedule-show {
+.selecting-schedule {
+  font-size: 30px;
+  margin: auto;
+  background-color: #d57149;
+  color: #fff5ea;
+  border-radius: 5px;
 
-  h1 {
-    font-size: 70px;
-    text-align: center;
+  &:hover {
+    background-color: #fff5ea;
+    color: #d57149;
   }
 }
 
