--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -1,5 +1,7 @@
 <div class="my-5 schedule-show">
-  <h1 class="mb-5">My Schedule</h1>
+  <div class="d-flex justify-content-center pt-5">
+    <%= link_to 'Select this schedule', select_schedule_path(@schedule), method: :post, class: "selecting-schedule p-2" %>
+  </div>
 
   <div class="show-calendar">
     <%= month_calendar(attribute: :start_date, events: @events) do |date, events| %>
