FEAT: map implemented

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,7 +11,13 @@
                 <div class="col mt-3">
                   <h1><%= @event.start_date.to_date  %></h1>
                   <h1 class="h3 mb-0"><%= @event.start_time.to_s(:time) %></h1>
-                  <p><%= @event.location%></p>
+                  <p><%= @event.address%></p>
+                  <div
+                    id="map"
+                    style="width: 100%;
+                    height: 400px;"
+                    data-markers="<%= @marker.to_json %>"
+                  ></div>
                 </div>
                 <div class="col">
                   <ul class="nav nav-pills justify-content-end">
