--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -6,14 +6,9 @@
 
   <% @chatroom.messages.each do |message| %>
     <div class="message-container" id="message-<%= message.id %>">
-      <i class="author">
-        <span><%= message.user.first_name %></span>
-        <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-      </i>
-      <p><%= message.content %></p>
+      <%= render 'messages/message', message: message %>
+      <% end %>
     </div>
-  <% end %>
-</div>
 
 <div class="container" style="margin:100px">
   <h1> Messages: </h1>
