FEAT: Added + to add a recruit from the Athletes Index

--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -9,7 +9,7 @@
       </div>
 
       <div>
-        <p><strong>Team: </strong><%= @athlete.team %> - <%= @athlete.team_url %></p>
+        <p><strong>Team: </strong><%= @athlete.athlete_team %> - <%= @athlete.athlete_team_url %></p>
         <p><strong>Graduation Year: </strong><%= @athlete.grad_year %></p>
         <p><strong>Nationality: </strong><%= @athlete.nationality %></p>
         <p><strong>Rating: </strong><%= @athlete.rating %></p>
