--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -26,11 +26,11 @@
           <td><%= athlete.first_name %> <%= athlete.last_name %></td>
           <td class="text-center"><%= athlete.grad_year %></td>
           <td class="text-center"><%= athlete.nationality %></td>
-          <td class="text-center"><%= athlete.team %></td>
-          <td class="text-center"><%= athlete.team_url %></td>
+          <td class="text-center"><%= athlete.athlete_team %></td>
+          <td class="text-center"><%= athlete.athlete_team_url %></td>
           <td class="text-center"><%= athlete.rating %></td>
           <td><%= link_to 'VIEW', athlete %></td>
-          <!-- <td> --><%#= link_to '➕', () %><!-- </td> -->
+          <td><%= link_to athlete_recruits_path(athlete), method: :post, remote: true do %><i class="fas fa-plus"></i><% end %>
         </tr>
       <% end %>
     </tbody>
