FEAT: tried to put in notes but the form doesn't work yet /:

--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -26,8 +26,8 @@
           <td><%= athlete.first_name %> <%= athlete.last_name %></td>
           <td class="text-center"><%= athlete.grad_year %></td>
           <td class="text-center"><%= athlete.nationality %></td>
-          <td class="text-center"><%= athlete.team %></td>
-          <td class="text-center"><%= athlete.team_url %></td>
+          <td class="text-center"><%= athlete.athlete_team %></td>
+          <td class="text-center"><%= athlete.athlete_team_url %></td>
           <td class="text-center"><%= athlete.rating %></td>
           <td><%= link_to 'VIEW', athlete %></td>
           <!-- <td> --><%#= link_to '➕', () %><!-- </td> -->
