FEAT: Adding update route for schedule event

--- a/app/views/athletes/index.html.erb
+++ b/app/views/athletes/index.html.erb
@@ -7,6 +7,8 @@
         <%= render 'shared/search' %>
   </div>
 
+  <%= link_to :back do %><i class="fas fa-reply"></i><% end %>
+  <%= link_to recruits_path do %><i class="fas fa-share"></i><% end %>
 
   <table>
     <thead>
