--- a/app/views/recruits/index.html.erb
+++ b/app/views/recruits/index.html.erb
@@ -6,6 +6,8 @@
       <div class='input-group-prepend'>
           <%= render 'shared/search' %>
       </div>
+      <%= link_to :back do %><i class="fas fa-reply"></i><% end %>
+      <%= link_to recruits_path do %><i class="fas fa-share"></i><% end %>
       <div>
         <%= link_to 'Generate Available Schedules', schedules_path, class: "p-2" %>
       </div>
