--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -5,7 +5,7 @@
     <% @schedules.each do |schedule| %>
       <li>
         <div class="d-flex justify-content-center">
-          <%= link_to 'VIEW', schedule_path(schedule), class: "select-calendar-link px-4 py-2" %>
+          <%= link_to 'SELECT', select_schedule_path(schedule), method: :post, class: "select-calendar-link px-4 py-2" %>
         </div>
         <div class="index-calendar">
           <%= month_calendar(attribute: :start_date, events: schedule.events) do |date, events| %>
