FEAT: Updating Shared Assigned Form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "font-awesome";
 @import "simple_calendar";
 @import "flatpickr/dist/flatpickr";
+@import 'select2/dist/css/select2';
 
 // Your CSS partials
 @import "components/index";
