--- a/app/views/shared/_assignedform.html.erb
+++ b/app/views/shared/_assignedform.html.erb
@@ -1,6 +1,6 @@
 
 <p><%= simple_form_for(@schedule_event) do |f| %>
-  <%= f.input :user_id, collection: ScheduleEvent::TEAM_MEMBERS, input_html: { class: 'select2' }, class: 'form-inputs' %>
+  <%= f.input :user_id, collection: team.users, input_html: { class: 'select2' }, class: 'form-inputs' %>
   <%= f.submit "Assign Event", class: "btn" %>
   <% end %>
 </p>
