--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="margin:100px">
   <h1>#<%= @chatroom.name %></h1>
 
-  <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
+  <div class="scroll-touch"id="messages" data-chatroom-id="<%= @chatroom.id %>">
     <% @chatroom.messages.each do |message| %>
       <div class="message-container" id="message-<%= message.id %>">
         <%= render 'messages/message', message: message %>
