FEAT: added border radius

--- a/app/assets/stylesheets/chatrooms/show.scss
+++ b/app/assets/stylesheets/chatrooms/show.scss
@@ -1,7 +1,8 @@
 .scroll-touch {
   overflow: auto;
   height: 300px;
-  background-color: #fcf8ec;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
 .container {
