--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,7 +27,7 @@
         </div>
 
         <div class="tab-pane fade" id="v-pills-schedule" role="tabpanel" aria-labelledby="v-pills-schedule-tab">
-          <%= render 'events/month' %>
+          <%= render partial: 'events/month', locals: { schedule: @schedule, schedule_event: @schedule_event }  %>
           <%= render 'shared/form' %>
         </div>
   <!--  <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">...</div>
