--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,16 +1,25 @@
-<div class="container" style="margin:100px">
-  <h1>#<%= @chatroom.name %></h1>
+<div class="messages-show mt-5">
+  <div class="pt-1">
 
-  <div class="scroll-touch"id="messages" data-chatroom-id="<%= @chatroom.id %>">
-    <% @chatroom.messages.each do |message| %>
-      <div class="message-container" id="message-<%= message.id %>">
-        <%= render 'messages/message', message: message %>
+    <div class="chatroom p-3 mt-5" style="margin:100px">
+      <h1><%= @chatroom.name %></h1>
+
+      <div class="scroll-touch p-3"id="messages" data-chatroom-id="<%= @chatroom.id %>">
+        <% @chatroom.messages.each do |message| %>
+          <div class="message-container" id="message-<%= message.id %>">
+            <%= render 'messages/message', message: message %>
+          </div>
+        <% end %>
+
+      <%= simple_form_for [ @chatroom, @message ], remote: true do |f| %>
+        <%= f.input :content, label: false, placeholder: "Write your Message here" %>
+      <% end %>
       </div>
-    <% end %>
-  </div>
 
-  <h1> Messages: </h1>
-  <%= simple_form_for [ @chatroom, @message ], remote: true do |f| %>
-    <%= f.input :content, label: false, placeholder: "Write your Message here" %>
-  <% end %>
+      <h1> Messages: </h1>
+      <%= simple_form_for [ @chatroom, @message ], remote: true do |f| %>
+        <%= f.input :content, label: false, placeholder: "Write your Message here" %>
+      <% end %>
+    </div>
+  </div>
 </div>
