FIX Event Pages

--- a/app/views/events/_month.html.erb
+++ b/app/views/events/_month.html.erb
@@ -8,19 +8,19 @@
       <% event.recruits.each do |recruit| %>
 
       <% if recruit.athlete.grad_year == 2022 %>
-        <a href="events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
+        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-danger d-flex justify-content-between">
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
           <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
       <% elsif recruit.athlete.grad_year == 2023 %>
-        <a href="events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
+        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-primary d-flex justify-content-between">
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
           <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
       <% elsif recruit.athlete.grad_year == 2024 %>
-        <a href="events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
+        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-info d-flex justify-content-between">
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
           <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
       <% else %>
-        <a href="events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
+        <a href="/events/<%= event.id %>" class="calendar list-group-item list-group-item-action list-group-item-success d-flex justify-content-between">
           <%= event.start_time.to_s(:time) %>-<%= recruit.athlete.first_name %></a>
           <%= render partial: 'shared/assignedform', locals: { schedule_event: schedule_event } %>
       <% end %>
